--- a/index.html
+++ b/index.html
@@ -29,11 +29,14 @@
 		<h1>step4 生成地图</h1>
 		<h5>点击下方按钮生成结果</h5>
 		<div id="print" class="btn">生成结果</div>
+		<h5>json配置信息</h5>
+		<textarea id="text-json-result">
+			
+		</textarea>
+		
 		<div id="result-contanier">
 			<canvas id="canvas" width="1" height="1"></canvas>
 		</div>
-
-		
 
 		<script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
 		<script type="text/javascript" src="js/app.js"></script>
