--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
 				<div id="hint-current"></div>
 			</h5>
 		</div>
+		
+		<div id="map-transform">
+			<a href="test/linear-transform/index.html" target="_blank" id="to-transform"></a>
+			前往地图变换
+		</div>
 
 		<script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
 		<script type="text/javascript" src="js/app.js"></script>
